Fixed a few sonarlint complains